--- a/admin.html
+++ b/admin.html
@@ -52,7 +52,7 @@ input,select{
   flex-wrap:wrap;
 }
 .stat{
-  flex:1 1 150px;
+  flex:1 1 130px;
   background:#f9fafc;
   border-radius:10px;
   padding:12px;
@@ -62,46 +62,31 @@ input,select{
   font-weight:600;
 }
 
-/*********************  SEARCH STICKY HEADER  **********************/
-.search-block{
-  position:sticky;
-  top:0;
-  background:white;
-  z-index:10;
-  padding:8px 6px;
-  border-radius:12px;
-  box-shadow:0 2px 6px rgba(0,0,0,0.08);
-  margin-bottom:8px;
-}
-.search-input{
-  width:100%;
-  padding:10px;
-  border-radius:10px;
-  border:1px solid #cbd5e1;
+/********************* TABLE SCROLL MOBILE **********************/
+.table-wrapper{
+  overflow-x:auto;
 }
 
-/********************* TABLE ************************/
+/* TABLE */
 table{
   width:100%;
   border-collapse:collapse;
-  min-width:650px;   /* forcing scroll table */
+  font-size:14px;
+  min-width:650px;
 }
-
+th{
+  background:#e2e8f0;
+  font-weight:700;
+}
 td,th{
+  border:1px solid #dcdfe4;
   padding:6px;
-  border:1px solid #d4d4d4;
 }
+tr:nth-child(even){background:#f8fafc;}
 
-@media(max-width:600px){
-  table{font-size:13px;}
-}
-
-
-/********************* RESPONSIVE **********************/
 @media(max-width:450px){
   table{font-size:12px;}
 }
-.msg{font-size:13px;color:#475569;}
 </style>
 </head>
 
@@ -121,13 +106,25 @@ td,th{
   </div>
 </div>
 
-<!-- DOWNLOAD TEMPLATE -->
+<!-- DATE FILTER -->
 <div class="section">
-  <h3>⬇ CSV Template</h3>
-  <button onclick="downloadTemplate()">Download Template</button>
+  <label><b>📅 Filter by Date</b></label>
+  <input type="date" id="filterDate" onchange="applyFilters()">
 </div>
 
-<!-- UPLOAD -->
+<!-- SEARCH BOX -->
+<div class="section">
+  <label><b>🔍 Search (Faculty / College)</b></label>
+  <input id="search" placeholder="Type to search..." onkeyup="applyFilters()">
+</div>
+
+<!-- CSV DOWNLOAD TEMPLATE -->
+<div class="section">
+  <h3>⬇ Download Template</h3>
+  <button onclick="downloadTemplate()">Download CSV Template</button>
+</div>
+
+<!-- CSV UPLOAD -->
 <div class="section">
   <h3>⬆ Upload CSV File</h3>
   <input type="file" id="csvFile" accept=".csv">
@@ -139,110 +136,107 @@ td,th{
   <p id="uploadMsg" class="msg"></p>
 </div>
 
-<!-- EXCEL -->
+<!-- EXCEL DOWNLOAD -->
 <div class="section">
   <button onclick="downloadExcel()">📥 Download Full Records</button>
 </div>
 
 
-
-<!-- SEARCH -->
-<div class="section search-block">
-  <input id="search" class="search-input" placeholder="🔍 Search faculty or college..." onkeyup="filterRecords()">
-</div>
-
-<!-- RECORD TABLE -->
-<div class="section" style="padding:6px;">
+<!-- RECORDS TABLE -->
+<div class="section table-wrapper">
   <div id="records"></div>
 </div>
 
 <button onclick="window.location='index.html'">Logout</button>
 
 
+
 <script>
 const GAS_URL="https://script.google.com/macros/s/AKfycbzt2aN9TjsZQk0F7cI4D1IA1QyJ_74IaB3ThQYsWVC0eC8Ksg1OsAm-zh6OzM8UiMuk/exec";
 
+let allData=[];
 
-/******** LOAD DASHBOARD *********/
-function loadDashboard(){
-  fetch(GAS_URL,{method:"POST",headers:{"Content-Type":"application/x-www-form-urlencoded"},body:"action=dashboard"})
-  .then(r=>r.json()).then(res=>{
-    s1.textContent=res.total;
-    s2.textContent=res.faculty;
-    s3.textContent=res.colleges;
-    s4.textContent=res.completed;
-    s5.textContent=res.pending;
-  });
-}
 
-/******** DOWNLOAD TEMPLATE ********/
-function downloadTemplate(){
-  fetch(GAS_URL,{method:"POST",headers:{"Content-Type":"application/x-www-form-urlencoded"},body:"action=downloadTemplate"})
-  .then(r=>r.json()).then(res=>{
-    const blob=new Blob([res.csv],{type:"text/csv"});
-    const link=document.createElement("a");
-    link.href=URL.createObjectURL(blob);
-    link.download=res.filename;
-    link.click();
-  });
-}
-
-/******** UPLOAD CSV ********/
-function uploadCsv(){
-  let file=document.getElementById("csvFile").files[0];
-  if(!file){ uploadMsg.textContent="Please select file"; return;}
-  let reader=new FileReader();
-  reader.onload=function(){
-    fetch(GAS_URL,{method:"POST",headers:{"Content-Type":"application/x-www-form-urlencoded"},body:`action=uploadCSV&data=${encodeURIComponent(reader.result)}&mode=${mode.value}`})
-    .then(r=>r.json()).then(res=>{uploadMsg.textContent=res.message; loadDashboard(); loadRecords();});
+/******** FORMAT DATE ********/
+function formatDate(d){
+  if(!d) return "";
+  if(d.includes("T")){
+    let dt=new Date(d);
+    return ("0"+dt.getDate()).slice(-2)+"-"+("0"+(dt.getMonth()+1)).slice(-2)+"-"+dt.getFullYear();
   }
-  reader.readAsText(file);
+  let p=d.split("-");
+  if(p.length===3) return p[2]+"-"+p[1]+"-"+p[0];
+  return d;
 }
 
-/******** EXCEL ********/
-function downloadExcel(){
-  fetch(GAS_URL,{method:"POST",headers:{"Content-Type":"application/x-www-form-urlencoded"},body:"action=excel"})
-  .then(r=>r.json()).then(res=>{
-    const blob=new Blob([res.csv],{type:"text/csv"});
-    const link=document.createElement("a");
-    link.href=URL.createObjectURL(blob);
-    link.download=res.filename;
-    link.click();
+
+/******** SHOW SUMMARY ********/
+function updateSummary(arr){
+  let total=arr.length;
+  let completed = arr.filter(r => r[6] && r[6].trim() !== "").length;
+  let pending = total - completed;
+  let faculties = [...new Set(arr.map(r=>r[1]))].length;
+  let colleges = [...new Set(arr.map(r=>r[2]))].length;
+
+  s1.textContent=total;
+  s2.textContent=faculties;
+  s3.textContent=colleges;
+  s4.textContent=completed;
+  s5.textContent=pending;
+}
+
+
+/******** DISPLAY TABLE ********/
+function display(arr){
+  let h=`
+  <table>
+    <tr>
+      <th>Date</th><th>Faculty</th><th>College</th>
+      <th>Session</th><th>Phone</th><th>Comments</th>
+    </tr>`;
+  arr.forEach(r=>{
+    h+=`<tr>
+      <td>${formatDate(r[0])}</td>
+      <td>${r[1]}</td>
+      <td>${r[2]}</td>
+      <td>${r[3]}</td>
+      <td>${r[4]}</td>
+      <td>${r[6]}</td>
+    </tr>`;
   });
+  h+=`</table>`;
+  records.innerHTML=h;
 }
 
-/******** PDF *********/
-function generateReport(){
-  let d = rdate.value;
-  if(!d){ pdfMsg.textContent="Select Date"; return; }
 
-  fetch(GAS_URL, {
-    method:"POST",
-    headers:{"Content-Type":"application/x-www-form-urlencoded"},
-    body:`action=pdf&date=${d}`
-  })
-  .then(r=>r.json())
-  .then(res=>{
-    if(!res.success){
-      pdfMsg.textContent = res.message;
-      return;
-    }
+/******** FILTER (Date + Search Combo) ********/
+function applyFilters(){
+  let k=search.value.toLowerCase();
+  let d=filterDate.value;
 
-    const binary = atob(res.data);
-    const bytes = new Uint8Array(binary.length);
-    for(let i=0;i<binary.length;i++) bytes[i] = binary.charCodeAt(i);
+  let filtered = allData.filter(r=>{
 
-    const blob = new Blob([bytes], {type:"application/pdf"});
-    const link = document.createElement("a");
-    link.href = URL.createObjectURL(blob);
-    link.download = res.filename;
-    link.click();
+    // Search filter
+    let sMatch = r[1].toLowerCase().includes(k) || r[2].toLowerCase().includes(k);
+
+    // Date filter
+    let rowDate="";
+    if(r[0].includes("T")){
+      let dt=new Date(r[0]);
+      rowDate = dt.getFullYear()+"-"+("0"+(dt.getMonth()+1)).slice(-2)+"-"+("0"+dt.getDate()).slice(-2);
+    } else rowDate = r[0];
+
+    let dMatch = (!d || d===rowDate);
+
+    return sMatch && dMatch;
   });
+
+  display(filtered);
+
+  if(d) updateSummary(filtered);  // Date summary
+  else updateSummary(allData);    // Full summary
 }
 
-
-/******** LIST & SEARCH *********/
-let allData = [];
 
 /******** LOAD RECORDS ********/
 function loadRecords(){
@@ -253,71 +247,102 @@ function loadRecords(){
   })
   .then(r=>r.json())
   .then(res=>{
-    allData = res.rows;
+    allData=res.rows;
     display(allData);
+    updateSummary(allData);
   });
 }
 
-/******** DATE FORMATTER ********/
-function formatDate(d){
-  if(!d) return "";
 
-  // Case-1: ISO Format (contains 'T')
-  if (d.includes("T")) {
-    let dt = new Date(d);
-    let dd = ("0" + dt.getDate()).slice(-2);
-    let mm = ("0" + (dt.getMonth() + 1)).slice(-2);
-    let yy = dt.getFullYear();
-    return dd + "-" + mm + "-" + yy;
-  }
-
-  // Case-2: Standard yyyy-mm-dd format
-  let p = d.split("-");
-  if (p.length === 3) {
-    return p[2] + "-" + p[1] + "-" + p[0];
-  }
-
-  return d;
-}
-
-/******** DISPLAY TABLE ********/
-function display(arr){
-  let h = `
-    <div style="overflow-x:auto;">
-      <table>
-        <tr>
-          <th>Date</th>
-          <th>Faculty</th>
-          <th>College</th>
-          <th>Session</th>
-          <th>Phone</th>
-          <th>Comments</th>
-        </tr>
-  `;
-
-  arr.forEach(r=>{
-    h += `
-        <tr>
-          <td>${formatDate(r[0])}</td>
-          <td>${r[1]}</td>
-          <td>${r[2]}</td>
-          <td>${r[3]}</td>
-          <td>${r[4]}</td>
-          <td>${r[6]}</td>
-        </tr>
-    `;
+/******** CSV TEMPLATE ********/
+function downloadTemplate(){
+  fetch(GAS_URL,{
+    method:"POST",
+    headers:{"Content-Type":"application/x-www-form-urlencoded"},
+    body:"action=downloadTemplate"
+  })
+  .then(r=>r.json())
+  .then(res=>{
+    const blob=new Blob([res.csv],{type:"text/csv"});
+    const link=document.createElement("a");
+    link.href=URL.createObjectURL(blob);
+    link.download=res.filename;
+    link.click();
   });
-
-  h += `
-      </table>
-    </div>
-  `;
-
-  records.innerHTML = h;
 }
 
 
+/******** UPLOAD CSV ********/
+function uploadCsv(){
+  let file=document.getElementById("csvFile").files[0];
+  if(!file){uploadMsg.textContent="Select file"; return;}
 
+  let reader=new FileReader();
+  reader.onload=function(){
+    fetch(GAS_URL,{
+      method:"POST",
+      headers:{"Content-Type":"application/x-www-form-urlencoded"},
+      body:`action=uploadCSV&data=${encodeURIComponent(reader.result)}&mode=${mode.value}`
+    })
+    .then(r=>r.json())
+    .then(res=>{
+      uploadMsg.textContent=res.message;
+      loadRecords();
+    });
+  }
+  reader.readAsText(file);
+}
+
+
+/******** DOWNLOAD EXCEL ********/
+function downloadExcel(){
+  fetch(GAS_URL,{
+    method:"POST",
+    headers:{"Content-Type":"application/x-www-form-urlencoded"},
+    body:"action=excel"
+  })
+  .then(r=>r.json())
+  .then(res=>{
+    const blob=new Blob([res.csv],{type:"text/csv"});
+    const link=document.createElement("a");
+    link.href=URL.createObjectURL(blob);
+    link.download=res.filename;
+    link.click();
+  });
+}
+
+
+/******** PDF REPORT ********/
+function generateReport(){
+  let d=document.getElementById("reportDate").value;
+  if(!d){ pdfMsg.textContent="Select Date"; return;}
+
+  fetch(GAS_URL,{
+    method:"POST",
+    headers:{"Content-Type":"application/x-www-form-urlencoded"},
+    body:`action=pdf&date=${d}`
+  })
+  .then(r=>r.json())
+  .then(res=>{
+    if(!res.success){pdfMsg.textContent=res.message;return;}
+
+    const binary=atob(res.data);
+    const bytes=new Uint8Array(binary.length);
+    for(let i=0;i<binary.length;i++) bytes[i]=binary.charCodeAt(i);
+
+    const blob=new Blob([bytes],{type:"application/pdf"});
+    const link=document.createElement("a");
+    link.href=URL.createObjectURL(blob);
+    link.download=res.filename;
+    link.click();
+  });
+}
+
+
+/******** PAGE LOAD ********/
+window.onload=()=>{
+  loadRecords();
+};
 </script>
 </body>
 </html>
