--- a/faculty.html
+++ b/faculty.html
@@ -206,7 +206,7 @@ function render(rows){
 
       <a class="btn callBtn" href="tel:${r.phone}">📞 Call</a>
       <a class="btn waBtn"
-href="https://wa.me/91${r.phone}?text=Dear%20Sir%2FMadam%2C%20Greetings%20from%20Kamaraj%20College%20of%20Engineering%20and%20Technology%20(CoE%20Office).%20On%20${encodeURIComponent(r.date)}%20during%20the%20${encodeURIComponent(r.session)}%20session%2C%20you%20have%20been%20allotted%20Hall%20Superintendent%20duty.%20Kindly%20confirm%20your%20availability%20by%20replying%20to%20this%20message.%20Thank%20you."
+href="https://wa.me/91${r.phone}?text=Dear%20Sir%2FMadam%2C%20Greetings%20from%20Kamaraj%20College%20of%20Engineering%20and%20Technology%20(CoE%20Office).%20On%20${encodeURIComponent(r.d)}%20during%20the%20${encodeURIComponent(r.session)}%20session%2C%20you%20have%20been%20allotted%20Hall%20Superintendent%20duty.%20Kindly%20confirm%20your%20availability%20by%20replying%20to%20this%20message.%20Thank%20you."
 target="_blank">
 💬 WhatsApp
 </a>
