--- a/faculty.html
+++ b/faculty.html
@@ -207,7 +207,7 @@ function render(rows){
       <a class="btn callBtn" href="tel:${r.phone}">📞 Call</a>
       <a class="btn waBtn"
 href="https://wa.me/91${r.phone}?text=${encodeURIComponent(
-`🙏 Dear Sir/Madam,
+`🙏 Respected ${r.faculty},
 Greetings from Kamaraj College of Engineering and Technology (CoE Office).
 
 🗓️ On ${r.Date}, during the ${r.session} session, you have been allotted the Hall Superintendent duty.
