--- a/faculty.html
+++ b/faculty.html
@@ -210,7 +210,7 @@ href="https://wa.me/91${r.phone}?text=${encodeURIComponent(
 `🙏 Respected ${r.faculty},
 Greetings from Kamaraj College of Engineering and Technology (CoE Office).
 
-🗓️ On ${r.Date}, during the ${r.session} session, you have been allotted the Hall Superintendent duty.
+🗓️ On ${r.d}, during the ${r.session} session, you have been allotted the Hall Superintendent duty.
 
 📌 Kindly confirm your availability by replying to this message.
 
