--- a/faculty.html
+++ b/faculty.html
@@ -206,14 +206,13 @@ function render(rows){
 
       <a class="btn callBtn" href="tel:${r.phone}">📞 Call</a>
 
-let dutyDate = r.d || r.Date || r.date || r.Duty_Date || r.examDate || r.hallDate || "";
 
       <a class="btn waBtn"
 href="https://wa.me/91${r.phone}?text=${encodeURIComponent(
 `🙏 Respected ${r.faculty},
 Greetings from Kamaraj College of Engineering and Technology (CoE Office).
 
-🗓️ On ${r.dutyDate}, during the ${r.session} session, you have been allotted the Hall Superintendent duty.
+🗓️ On ${r.d || r.Date || r.date || r.Duty_Date || r.examDate || r.hallDate}, during the ${r.session} session, you have been allotted the Hall Superintendent duty.
 
 📌 Kindly confirm your availability by replying to this message.
 
