--- a/faculty.html
+++ b/faculty.html
@@ -198,7 +198,9 @@ function render(rows){
 
   rows.forEach(r=>{
     let status=(r.comments && r.comments.trim()!=="")?"done":"pending";
-let dutyDate = sessionStorage.getItem("selectedDate");
+
+    // 🔥 Get selected date
+    let dutyDate = sessionStorage.getItem("selectedDate");
 
     html+=`
     <div class="card ${status}">
@@ -208,13 +210,12 @@ let dutyDate = sessionStorage.getItem("selectedDate");
 
       <a class="btn callBtn" href="tel:${r.phone}">📞 Call</a>
 
-
       <a class="btn waBtn"
 href="https://wa.me/91${r.phone}?text=${encodeURIComponent(
 `🙏 Respected ${r.faculty},
 Greetings from Kamaraj College of Engineering and Technology (CoE Office).
 
-🗓️ On ${r.d || r.Date || r.date || r.Duty_Date || r.examDate || r.hallDate}, during the ${r.session} session, you have been allotted the Hall Superintendent duty.
+🗓️ On ${dutyDate}, during the ${r.session} session, you have been allotted the Hall Superintendent duty.
 
 📌 Kindly confirm your availability by replying to this message.
 
@@ -224,8 +225,6 @@ target="_blank">
 💬 WhatsApp
 </a>
 
-
-
       <textarea id="c${r.row}">${r.comments||""}</textarea>
       <button class="saveBtn" onclick="save(${r.row})">Save</button>
       <p id="m${r.row}" class="msg"></p>
@@ -234,6 +233,7 @@ target="_blank">
 
   document.getElementById("content").innerHTML=html;
 }
+
 
 function save(row){
   let c=document.getElementById("c"+row).value;
