--- a/faculty.html
+++ b/faculty.html
@@ -109,6 +109,21 @@ h3{
   margin-left:4px;
 }
 
+
+/* SMS Button Style */
+.smsBtn{
+  background:#2563eb;
+  color:white;
+  border:1px solid #1e3a8a;
+}
+
+.smsBtn:hover{
+  background:#1e40af;
+  color:white;
+  transform:scale(1.05);
+}
+
+
 /* COMMENT BOX */
 textarea{
   width:96%;
@@ -224,6 +239,22 @@ Greetings from Kamaraj College of Engineering and Technology (CoE Office).
 target="_blank">
 💬 WhatsApp
 </a>
+
+
+<a class="btn smsBtn"
+  href="sms:91${r.phone}?&body=${encodeURIComponent(
+`Respected ${r.faculty},
+Greetings from Kamaraj College of Engineering and Technology (CoE Office).
+
+On ${dutyDate}, during the ${r.session} session, you have been allotted the Hall Superintendent duty.
+
+Kindly confirm your availability by replying to this message.
+
+Thank you.`
+)}">
+  📩 SMS
+</a>
+
 
       <textarea id="c${r.row}">${r.comments||""}</textarea>
       <button class="saveBtn" onclick="save(${r.row})">Save</button>
