--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ button:hover{
 <body>
 
 <div class="login-box">
-  <h2>9204 - COE OFFICE</h2>
+  <h2>9204 - Controller of Examination Office</h2>
   <h2>☎ Call Duty Login</h2>
 
   <div class="inputBox">
@@ -184,4 +184,5 @@ function showError(){
 
 </body>
 </html>
+
 
