--- a/faculty.html
+++ b/faculty.html
@@ -176,7 +176,7 @@ textarea{
 
 <!-- DATE + LOGOUT in same row -->
 <div class="topBar">
-  <label class="dLabel">Select Date</label>
+  <label class="dLabel">Select Exam Date </label>
   <input type="date" id="date" onchange="loadData()">
   <button class="logout" onclick="window.location='index.html'">Logout</button>
 </div>
